--- a/style.css
+++ b/style.css
@@ -1,36 +1,16 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
 * {
-    padding: 0;
     margin: 0;
-    box-sizing: border-box;
-}
-
-header {
-    padding: 10px;
-    background-color: #272635;
-}
-
-header > h1 {
-    font-size: 40px;
-    font-family: 'Poppins';
-    text-align: center;
-    color: white;
-}
-
-#container {
-    position: relative;
-    top: 30px;
-    margin: auto;
-    height: 960px;
-    width: 960px;
     padding: 0;
-    border: none;
 }
 
 .grid {
-    margin: 0;
-    padding: 0;
+    display: grid;
+    height: 500px;
+    width: 500px;
+    grid-template-columns: auto auto auto;
+    grid-auto-flow: 50px;
+}
+.cell {
+    padding: 20px;
     border: 1px solid black;
-    border-radius: 1000px;
-    display: inline-block;
 }
