--- a/style.css
+++ b/style.css
@@ -1,8 +1,45 @@
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 * {
     margin: 0;
     padding: 0;
 }
 
+body {
+    font-family: 'Bebas Neue', cursive;
+}
+
+#container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.header {
+    background-color: #5899E2;
+    width: 100%;
+    text-align: center;
+    margin-bottom: 5vh;
+    padding: 20px;
+}
+.header > p {
+    color: white;
+    font-size: 3rem;
+}
+
 .grid {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 5px;
+    margin-bottom: 5vh;
+}
+.row {
     display: grid;
+    gap: 5px;
+}
+
+.box {
+    border: 2px solid black;
+    padding: 20px;
 }
