--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body {
 }
 .header > p {
     color: white;
-    font-size: 3rem;
+    font-size: 4rem;
 }
 
 .grid {
@@ -34,7 +34,7 @@ body {
     gap: 5px;
     margin-bottom: 5vh;
 }
-.row {
+.column {
     display: grid;
     gap: 5px;
 }
@@ -42,4 +42,38 @@ body {
 .box {
     border: 2px solid black;
     padding: 20px;
+}
+.active {
+    background-color: black;
+}
+
+#buttons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    margin-bottom: 5vh;
+    gap: 20px;
+}
+#buttons > input {
+    cursor: pointer;
+}
+
+#remove-grid-button {
+    background-color: #FE5F55;
+    border: 2px solid black;
+    border-radius: 10px;
+    color: white;
+    font-weight: 600;
+    font-size: 1.2rem;
+    padding: 10px;
+}
+#reset-grid-button {
+    background-color: #FE5F55;
+    border: 2px solid black;
+    border-radius: 10px;
+    color: white;
+    font-weight: 600;
+    font-size: 1.2rem;
+    padding: 10px;
 }
