deleted the column class, since the function to display the grid is shorter and more direct, since it now only has one loop to display the grid, and not like the previous version, which had two loops for doing the same job. And minor UI changes.

--- a/style.css
+++ b/style.css
@@ -28,18 +28,17 @@ body {
 }
 
 .grid {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 5vh;
-}
-.column {
     display: grid;
+    height: 65vh;
+    width: 65vh;
+    grid-template-columns: repeat(var(--gridNumber), auto);
+    grid-template-rows: repeat(var(--gridNumber), auto);
 }
 
 .box {
-    border: 2px solid rgb(220, 220, 220);
-    padding: 20px;
+    border: 1px solid rgb(225, 225, 225);
+    width: auto;
+    height: auto;
 }
 .mousedown {
     background-color: black;
