Made some major UI changes. Now the input number field and the reset button are nested in their own little div, whose display is set to flex, and the items inside this div, and the flex direction is set to column, so the elements inside this div are aligned symmetrically. Along with that change, the buttons div and the grid div are also sublings inside the parent div, with the parent div also set to display flex with the content being justified to space between, and a few more minor changes.

--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: row;
+    flex-direction: column;
     margin-bottom: 5vh;
     gap: 20px;
 }
